<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023.
  ~ Richard Uzor
  ~ Under the Authority of Devstrike Digital Ltd.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.home.ui.Home">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:background="@drawable/toolbar_header">

        <TextView
            android:id="@+id/greeting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/padding_mini"
            android:layout_toStartOf="@id/toolbar_iv_account"
            android:padding="@dimen/padding_mini"
            android:text="@string/good_morning_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_xl" />


        <TextView
            android:id="@+id/health_tip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/greeting_text"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:text="@string/health_tip_dummy_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_l" />

        <ImageView
            android:id="@+id/toolbar_iv_account"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/padding_midi"
            android:contentDescription="@string/toolbar_iv_account"
            android:padding="@dimen/padding_mini"
            app:srcCompat="@drawable/ic_account_circle" />

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_toolbar"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        app:cardElevation="@dimen/padding_mini">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_info_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        app:cardElevation="@dimen/padding_mini">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/padding_mini"
                android:orientation="horizontal"
                android:padding="@dimen/padding_mini"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding_mini"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/purple_200"
                    app:cardElevation="@dimen/padding_mini">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_inventory_menu_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/inventory_title"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_xl" />

                        <TextView
                            android:id="@+id/txt_inventory_menu_metric"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_inventory_menu_main"
                            android:text="@string/inventory_menu_metric"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_l" />


                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding_mini"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/purple_200"
                    app:cardElevation="@dimen/padding_mini">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_reservation_menu_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/reservation_title"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_xl" />

                        <TextView
                            android:id="@+id/txt_reservation_menu_metric"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_reservation_menu_main"
                            android:text="@string/reservation_menu_metric"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_l" />


                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/padding_mini"
                android:orientation="horizontal"
                android:padding="@dimen/padding_mini"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding_mini"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/purple_200"
                    app:cardElevation="@dimen/padding_mini">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_profile_menu_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/store_profile_title"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_xl" />

                        <TextView
                            android:id="@+id/txt_store_profile_menu_metric"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_profile_menu_main"
                            android:text="@string/store_profile_menu_metric"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_l" />


                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding_mini"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/purple_200"
                    app:cardElevation="@dimen/padding_mini">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_plan_menu_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/plan_title"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_xl" />

                        <TextView
                            android:id="@+id/txt_plan_menu_metric"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_plan_menu_main"
                            android:text="@string/plan_menu_metric"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_l" />


                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>