<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023.
  ~ Richard Uzor
  ~ Under the Authority of Devstrike Digital Ltd.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/custom_color_defined"
    tools:context=".features.auth.ui.ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            app:srcCompat="@drawable/unisach_bee_logo_splash"
            android:contentDescription="@string/unisach_logo_text"
            android:id="@+id/sign_in_mini_logo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_mini_logo"
            android:text="@string/forgot_password_title"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:textSize="@dimen/text_xxl"
            android:id="@+id/tv_sign_in_title"/>

        <TextView
            android:id="@+id/tv_sign_in_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sign_in_title"
            android:layout_marginStart="@dimen/padding_mini"
            android:layout_marginTop="@dimen/padding_mini"
            android:layout_marginEnd="@dimen/padding_mini"
            android:layout_marginBottom="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:text="@string/forgot_password_subtitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_s" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/padding_mini"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/auth_card_color"
            android:layout_margin="@dimen/margin_midi"
            android:padding="@dimen/padding_mini"
            app:cardCornerRadius="@dimen/padding_midi"
            android:id="@+id/card_sign_in">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_mini"
                android:layout_margin="@dimen/padding_mini"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_forgot_password_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_mini"
                    android:hint="@string/sign_in_email"
                    android:textColorHint="@color/custom_accent_color"
                    app:boxStrokeColor="@color/custom_accent_color"
                    android:paddingTop="@dimen/padding_midi">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/forgot_password_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/sign_in_email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:labelFor="@id/forgot_password_email" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/account_forgot_password_login_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/padding_mini"
                    android:padding="@dimen/padding_mini"
                    android:text="@string/account_forgot_password_login_prompt"
                    android:textColor="@color/custom_accent_color"
                    android:textSize="@dimen/text_s" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/account_forgot_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_sign_in"
            android:layout_margin="@dimen/margin_midi"
            android:backgroundTint="@color/custom_accent_color"
            android:padding="@dimen/padding_mini"
            android:text="@string/account_forgot_password_btn" />


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>