<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.auth.ui.SignIn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_title"
            android:textAlignment="center"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:textSize="@dimen/text_xxl"
            android:id="@+id/tv_sign_in_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_subtitle"
            android:textAlignment="center"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:textSize="@dimen/text_l"
            android:layout_below="@id/tv_sign_in_title"
            android:id="@+id/tv_sign_in_subtitle"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/padding_mini"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:id="@+id/card_sign_in">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_mini"
                android:layout_margin="@dimen/padding_mini"
                android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_sign_in_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_mini"
                        android:hint="@string/sign_in_email"
                        android:textColorHint="@color/purple_200"
                        android:paddingTop="@dimen/padding_midi">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_in_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/sign_in_email"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:labelFor="@id/sign_in_email" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_sign_in_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_mini"
                        android:hint="@string/sign_in_password"
                        android:paddingTop="8dp"
                        android:textColorHint="@color/purple_200"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/purple_200">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_in_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/sign_in_password"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:labelFor="@id/sign_in_password" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/account_log_in_forgot_password_prompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="@dimen/padding_mini"
                        android:padding="@dimen/padding_mini"
                        android:text="@string/account_log_in_forgot_password_prompt"
                        android:textColor="@color/purple_200"
                        android:textSize="@dimen/text_s" />


                </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

                <Button
                    android:id="@+id/account_log_in_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_sign_in"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_midi"
                    android:backgroundTint="@color/purple_200"
                    android:padding="@dimen/padding_mini"
                    android:text="@string/account_btn_login" />

        <TextView
            android:id="@+id/account_log_in_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_log_in_btn_login"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_mini"
            android:layout_marginTop="@dimen/margin_mini"
            android:layout_marginEnd="@dimen/margin_mini"
            android:layout_marginBottom="@dimen/margin_mini"
            android:padding="@dimen/padding_mini"
            android:text="@string/account_not_logged_in_create_account"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/text_s" />

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>